--- a/snippets/quantity-selector.liquid
+++ b/snippets/quantity-selector.liquid
@@ -54,7 +54,7 @@
       {% endif %}
     >
       <span class="visually-hidden">{{ 'accessibility.decrease_quantity' | t }}</span
-      ><span class="svg-wrapper icon-plus">
+      ><span class="svg-wrapper icon-minus">
         {{- 'icon-minus.svg' | inline_asset_content -}}
       </span>
     </button>
