--- a/snippets/quick-add.liquid
+++ b/snippets/quick-add.liquid
@@ -74,38 +74,21 @@
             - There is only one product option, and it is displayed as swatches on the product card, and no swatch is selected
             - There is more than one product option
       {% endcomment %}
-      {% render 'add-to-cart-button',
-        add_to_cart_text: add_to_cart_text,
-        class: 'button quick-add__button quick-add__button--add add-to-cart-button',
-        can_add_to_cart: can_add_to_cart,
-        icon_only_on_mobile: true,
-        product: product
-      %}
 
       <button
-        class="button quick-add__button quick-add__button--choose add-to-cart-button"
-        {% comment %} type="submit" is the default, so we explicitly set it to "button" to prevent the ProductFormComponent.handleSubmit from being triggered {% endcomment %}
-        type="button"
+        class="button quick-add__button add-to-cart-button"
+        {% if quick_add_button == 'add' %}
+          type="submit"
+        {% else %}
+          type="button"
+          on:click="quick-add-component/handleClick"
+        {% endif %}
         name="add"
-        on:click="quick-add-component/handleClick"
       >
-        <span
-          class="add-to-cart-text quick-add__button-content"
-        >
-          {% comment %} split the icon and the text with a grid transition {% endcomment %}
-          <span
-            aria-hidden="true"
-            class="svg-wrapper add-to-cart-icon quick-add__button-icon"
-          >
-            {{- 'icon-add-to-cart.svg' | inline_asset_content -}}
-          </span>
-          <span class="add-to-cart-text__content is-visually-hidden-mobile quick-add__button-text">
-            <span>
-              {% comment %} use a double-nested span to bake the padding into the text {% endcomment %}
-              <span>
-                {{ choose_options_text }}
-              </span>
-            </span>
+        <span class="quick-add__button-content">
+          <span class="quick-add__button-text">{{- 'actions.add' | t -}}</span>
+          <span class="svg-wrapper icon-plus">
+            {{- 'icon-plus.svg' | inline_asset_content -}}
           </span>
         </span>
       </button>
